--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 :root{
-    --calmblue: #40C8DB;
-    --headingblue: #396A75;
+    --calmblue: #e08e12;
+    --headingblue: #157380;
     --backgroundblue: rgba(214,226,255,.2);
     --warmingred: #C84918;
     --gogreen: #A4DB2F;
-    --blackish: #385C47; 
+    --linkgreen: #6b8f1d;
+    --blackish: #223a41; 
     --white: #ffffff;
 }
 
@@ -13,13 +14,13 @@ body{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    width: 100vw;
+    width: 100vw !important;
     font-family: Helvetica, sans-serif;
 }
 
 header{
   
-  margin-left: 30vw;
+  margin-left: 36vw;
 }
 
 .logo{
@@ -68,13 +69,14 @@ h1{
     display: inline-flex;
     align-items: center;
     margin-bottom: 0;
+    margin-top: .5em;
 }
 
 h2{
     font-size: 2.5em;
     margin-top: 10px;
     margin-bottom: 0;
-    width: 60%;
+    width: 100%;
     
 }
 
@@ -98,6 +100,7 @@ h4 .invisible-button{
 
 h4 .fa{
     margin-right: .5em;
+    height: 100% !important;
 }
 
 p{
@@ -106,17 +109,17 @@ p{
 }
 
 a{
-    text-decoration: none;
-    color: var(--blackish);
+    color: var(--calmblue);
 }
 
 a:hover{
-    text-decoration: underline;
+    text-decoration: none;
     color: var(--gogreen);
 }
 
 a:visited{
-    color: var(--calmblue);
+    color: var(--linkgreen);
+    text-decoration: none;
 }
 
 li{
@@ -165,7 +168,7 @@ li{
 }
 
 section{
-    padding-left: 2em;
+    padding: 0 2em;
 }
 
 textarea{
@@ -245,17 +248,27 @@ textarea{
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color: var(--calmblue);;
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px var(--calmblue);
   }
   
   input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
+  }
+
+  img{
+    border: 1px solid var(--blackish);
+    max-width: 60vw;
+    margin-top: 5px;
+  }
+
+  li img{
+    margin-top: 10px;
   }
   
   /* Rounded sliders */
@@ -271,8 +284,11 @@ textarea{
     font-size: 1.5em;
   }
 
+  
+
   #toggle-info-switch{
     display: block;
+    transform: rotate(180deg);
   }
 
   #toggle-info-switch-container{
@@ -299,7 +315,11 @@ textarea{
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    font-size: 1.5em;
+    color: var(--headingblue);
   }
+
+
 
   .invisible-button{
     background: transparent;
@@ -321,4 +341,102 @@ textarea{
 
   #logo{
     margin-left: 10px;
+    border: none;
   }
+
+  #open-menu-button, #close-menu-button{
+   display: none;
+}
+
+  @media only screen and (max-device-width: 1000px){
+    aside{
+        display: none;
+        background: var(--white);
+        width: 80vw;
+        z-index: 100;
+    }
+
+    .open{
+        display: inline-flex;
+        flex-direction: column;
+    }
+    
+    header{
+        margin-left: 2em;
+    }
+
+    h1{
+        margin-top: .8em;
+    }
+
+    h3,h4{
+        margin: 1em 0 0 .5em;
+    }
+
+    h1,h2{
+        width: 80vw;
+    }
+
+    h1{
+        font-size: 2.5em;
+    }
+
+    h2{
+        font-size: 1.8em;
+    }
+
+    h3{
+        font-size: 1.4em;
+    }
+
+    h4{
+        border-bottom: none;
+        font-size: 1.1em;
+    }
+
+   p{
+    font-size: 1.1em;
+    width: 100% !important;
+    margin: .5em 0;
+   }
+
+    main{
+        padding: 0;
+        width: 100vw;
+        margin: 0;
+    }
+
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }    
+
+    ul, ol{
+        margin: 0 auto;
+    }
+
+    #open-menu-button{
+        font-size: 1.8em;
+        position: fixed;
+        top:0;
+        left: 0;
+        color: var(--blackish);
+    }
+
+    #close-menu-button{
+        font-size: 1.8em;
+        color: var(--blackish);
+    }
+
+   
+
+    #needed-section{
+        margin:1em;
+        width: 78vw;
+    }
+
+    #needed-section h2{
+        margin-top: 0;
+    }
+}
